--- a/cmdb.adoc
+++ b/cmdb.adoc
@@ -1,63 +1,205 @@
-Une CMDB (Configuration Management Database) est un élément clé de l'ITSM (Gestion des Services IT) qui centralise les informations sur tous les actifs, systèmes, services et composants de l'infrastructure IT d'une organisation. Elle fait partie du processus de gestion des configurations et vise à garantir que les équipes IT disposent d'une vue claire et centralisée de l'infrastructure pour mieux gérer, surveiller et optimiser les services IT.
+= Configuration Management Database
+:revealjs_theme: beige
+:source-highlighter: highlight.js
+:icons: font
 
-Objectifs de la CMDB :
-Gestion des configurations : Offrir une vue globale et précise de tous les éléments de configuration (Configuration Items, CI), tels que les serveurs, applications, réseaux, bases de données, et leur relation mutuelle.
+== Introduction
 
-Amélioration de la visibilité : Permettre une compréhension plus claire de l'infrastructure IT, des dépendances entre les différents composants et des impacts potentiels des changements.
+Une CMDB (Configuration Management Database) est un élément clé de l'ITSM (Gestion des Services IT) ...
 
-Support des processus ITSM : La CMDB soutient plusieurs processus ITSM, notamment la gestion des incidents, des problèmes, des changements, et la gestion des actifs. Elle aide à identifier les actifs affectés par des incidents et à comprendre l'impact potentiel d'un changement sur les services.
+=== ...
 
-Caractéristiques principales d’une CMDB :
-Éléments de configuration (Configuration Items, CI) : Un CI est tout actif ou composant de l'infrastructure IT qui doit être géré. Cela peut inclure :
+
+qui centralise les informations sur tous les actifs, systèmes, services et composants de l'infrastructure IT d'une organisation. 
+
+=== ...
+
+Elle fait partie du processus de gestion des configurations et vise à garantir que les équipes IT disposent d'une vue claire et 
+
+=== ...
+
+centralisée de l'infrastructure pour mieux gérer, surveiller et optimiser les services IT.
+
+=== Objectifs de la CMDB :
+
+Gestion des configurations : Offrir une vue globale et précise de tous les éléments de configuration (Configuration Items, CI), 
+
+=== ...
+
+tels que les serveurs, applications, réseaux, bases de données, et leur relation mutuelle.
+
+=== Amélioration de la visibilité : 
+
+Permettre une compréhension plus claire de l'infrastructure IT, des dépendances entre les différents composants et des impacts potentiels des changements.
+
+=== Support des processus ITSM : 
+
+La CMDB soutient plusieurs processus ITSM, notamment la gestion des incidents, des problèmes, des changements, et la gestion des actifs. 
+
+=== ...
+
+Elle aide à identifier les actifs affectés par des incidents et à comprendre l'impact potentiel d'un changement sur les services.
+
+=== Caractéristiques principales d’une CMDB :
+
+Éléments de configuration (Configuration Items, CI) : 
+
+=== ...
+
+Un CI est tout actif ou composant de l'infrastructure IT qui doit être géré. 
+
+=== ...
+
+Cela peut inclure :
 
 Matériel (serveurs, routeurs, etc.)
+
+=== ...
+
 Logiciels (systèmes d'exploitation, applications)
+
+=== ...
+
 Services (services IT spécifiques)
+
+=== ...
+
 Relations entre les CIs (dépendances entre les composants)
-Dépendances et relations : La CMDB ne se limite pas à stocker des informations sur les composants, mais aussi à cartographier les relations entre ces composants. Par exemple, une application dépend d'un serveur ou d'une base de données spécifique.
 
-Suivi des changements : La CMDB permet de suivre les changements dans les configurations des CIs. Elle enregistre les informations sur les mises à jour, modifications, ajouts ou suppressions d'éléments de configuration, ce qui est essentiel pour gérer les incidents et les problèmes.
+== Dépendances et relations : 
 
-Conformité et audit : La CMDB joue un rôle clé dans les audits de conformité en permettant de montrer une vue détaillée des configurations et des changements réalisés sur les systèmes critiques.
+La CMDB ne se limite pas à stocker des informations sur les composants, mais aussi à cartographier les relations entre ces composants. 
 
-Avantages d'une CMDB :
-Visibilité accrue sur l'infrastructure IT : La CMDB centralise toutes les informations sur les éléments de l'infrastructure, ce qui permet aux équipes IT d'avoir une vue d'ensemble et de comprendre les dépendances critiques.
+=== ...
 
-Amélioration de la gestion des incidents et des problèmes : Lorsqu'un incident se produit, la CMDB permet de rapidement identifier quels composants sont affectés et de comprendre l'impact global sur les services IT. Cela permet une résolution plus rapide.
+Par exemple, une application dépend d'un serveur ou d'une base de données spécifique.
 
-Meilleure gestion des changements : En utilisant une CMDB, les équipes IT peuvent anticiper l'impact d'un changement sur les autres composants et services. Cela réduit le risque d'erreurs lors de la mise en œuvre de changements.
+=== Suivi des changements : 
 
-Optimisation des actifs : Une CMDB permet de mieux gérer les actifs matériels et logiciels, en identifiant les redondances, les composants obsolètes, ou les ressources sous-utilisées, ce qui peut aider à réduire les coûts.
+La CMDB permet de suivre les changements dans les configurations des CIs. 
 
-Amélioration de la conformité : Grâce à une CMDB bien structurée, il est plus facile de répondre aux exigences de conformité réglementaire, comme celles liées à la gestion des données ou à la sécurité.
+=== ...
 
-Processus de gestion liés à la CMDB :
-Identification des éléments de configuration : La première étape consiste à identifier les éléments critiques de l'infrastructure IT et à les intégrer dans la CMDB.
+Elle enregistre les informations sur les mises à jour, modifications, ajouts ou suppressions d'éléments de configuration, ce qui est essentiel pour gérer les incidents et les problèmes.
 
-Contrôle des versions : La CMDB doit enregistrer les versions des éléments de configuration et leurs modifications. Cela permet de gérer plusieurs versions d'un même composant et d'historiser les changements.
+=== Conformité et audit : 
 
-Contrôle des accès : Il est essentiel de définir qui a le droit de modifier les informations dans la CMDB pour éviter les erreurs ou les accès non autorisés.
+La CMDB joue un rôle clé dans les audits de conformité en permettant de montrer une vue détaillée des configurations et des changements réalisés sur les systèmes critiques.
 
-Audit et validation des données : La CMDB doit être régulièrement auditée et ses données vérifiées pour s'assurer que les informations sur les configurations sont exactes et à jour.
+== Avantages d'une CMDB :
 
-Outils de CMDB :
-Il existe plusieurs outils pour la mise en œuvre et la gestion d'une CMDB dans une organisation. Ces outils sont souvent intégrés dans des solutions plus vastes de gestion des services IT (ITSM). Voici quelques exemples :
+=== Visibilité accrue sur l'infrastructure IT : 
 
-ServiceNow : Un des outils ITSM les plus populaires, ServiceNow inclut une CMDB robuste qui centralise les informations sur les configurations et les services.
-BMC Helix (anciennement Remedy) : Une autre solution ITSM qui offre une gestion complète des configurations via une CMDB.
-Micro Focus Service Manager : Cet outil fournit une gestion des services IT, incluant une CMDB pour suivre les configurations et leurs relations.
-Jira Service Management : Bien que plus léger que d'autres outils, Jira propose une gestion des incidents et des changements avec des fonctionnalités de base pour la gestion des configurations.
-Défis liés à la CMDB :
-Complexité de mise en œuvre : La création et la gestion d'une CMDB peuvent être complexes, surtout dans les environnements IT très vastes et dynamiques.
+La CMDB centralise toutes les informations sur les éléments de 
 
-Qualité des données : Une CMDB est aussi bonne que les données qu'elle contient. Il est essentiel de maintenir des données précises et à jour, sans quoi la CMDB peut perdre de son utilité.
+=== ...
 
-Gestion des relations : Cartographier les relations entre les différents CIs peut être compliqué, surtout lorsque les systèmes sont interconnectés à grande échelle.
+l'infrastructure, ce qui permet aux équipes IT d'avoir une vue d'ensemble et de comprendre les dépendances critiques.
 
-Coût de maintenance : Le maintien d'une CMDB, surtout si elle couvre l'intégralité de l'infrastructure IT, peut nécessiter des ressources et des outils dédiés, ce qui peut représenter un investissement important.
+=== Amélioration de la gestion des incidents et des problèmes : 
 
-Conclusion :
-La CMDB est un élément central pour une gestion efficace des services IT. Elle offre une vue complète des actifs IT, permet de mieux gérer les incidents et les changements, et aide à assurer la conformité aux réglementations. Toutefois, sa mise en place et sa gestion exigent des ressources et un engagement constant pour garantir que les données sont exactes et exploitables.
+
+Lorsqu'un incident se produit, la CMDB permet de rapidement identifier quels composants sont affectés et de comprendre l'impact global sur les services IT. 
+
+=== ...
+
+
+Cela permet une résolution plus rapide.
+
+=== Meilleure gestion des changements : 
+
+
+En utilisant une CMDB, les équipes IT peuvent anticiper l'impact d'un changement sur les autres composants et services. 
+
+=== ...
+
+Cela réduit le risque d'erreurs lors de la mise en œuvre de changements.
+
+=== Optimisation des actifs : 
+
+
+Une CMDB permet de mieux gérer les actifs matériels et logiciels, en identifiant les redondances, les composants obsolètes, ...
+
+=== ...
+
+ou les ressources sous-utilisées, ce qui peut aider à réduire les coûts.
+
+=== Amélioration de la conformité : 
+
+Grâce à une CMDB bien structurée, il est plus facile de répondre aux exigences de conformité réglementaire, comme celles liées à la gestion des données ou à la sécurité.
+
+=== Processus de gestion liés à la CMDB :
+
+Identification des éléments de configuration : La première étape consiste à identifier les éléments critiques de l'infrastructure IT et ...
+
+=== ...
+
+à les intégrer dans la CMDB.
+
+=== Contrôle des versions : 
+
+La CMDB doit enregistrer les versions des éléments de configuration et leurs modifications. 
+
+=== ...
+
+Cela permet de gérer plusieurs versions d'un même composant et d'historiser les changements.
+
+=== Contrôle des accès : 
+
+Il est essentiel de définir qui a le droit de modifier les informations dans la CMDB pour éviter les erreurs ou les accès non autorisés.
+
+=== Audit et validation des données : 
+
+
+La CMDB doit être régulièrement auditée et ses données vérifiées pour s'assurer que les informations sur les configurations sont exactes et à jour.
+
+== Outils de CMDB :
+
+
+Il existe plusieurs outils pour la mise en œuvre et la gestion d'une CMDB dans une organisation. 
+
+=== ...
+
+Ces outils sont souvent intégrés dans des solutions plus vastes de gestion des services IT (ITSM). 
+
+
+=== Exemples (rappel)
+
+=== ServiceNow : 
+
+Un des outils ITSM les plus populaires, ServiceNow inclut une CMDB robuste qui centralise les informations sur les configurations et les services.
+
+=== BMC Helix (anciennement Remedy) : 
+
+Une autre solution ITSM qui offre une gestion complète des configurations via une CMDB.
+
+
+=== Micro Focus Service Manager : 
+
+Cet outil fournit une gestion des services IT, incluant une CMDB pour suivre les configurations et leurs relations.
+
+=== Jira Service Management : 
+
+Bien que plus léger que d'autres outils, Jira propose une gestion des incidents et des changements avec des fonctionnalités de base pour la gestion des configurations.
+
+== Défis liés à la CMDB :
+
+=== Complexité de mise en œuvre : 
+
+La création et la gestion d'une CMDB peuvent être complexes, surtout dans les environnements IT très vastes et dynamiques.
+
+=== Qualité des données : 
+
+Une CMDB est aussi bonne que les données qu'elle contient. Il est essentiel de maintenir des données précises et à jour, sans quoi la CMDB peut perdre de son utilité.
+
+=== Gestion des relations : 
+
+Cartographier les relations entre les différents CIs peut être compliqué, surtout lorsque les systèmes sont interconnectés à grande échelle.
+
+=== Coût de maintenance : 
+
+Le maintien d'une CMDB, surtout si elle couvre l'intégralité de l'infrastructure IT, peut nécessiter des ressources et des outils dédiés, ce qui peut représenter un investissement important.
+
 
 
 
