--- a/iso-27001.adoc
+++ b/iso-27001.adoc
@@ -42,7 +42,12 @@ L'ISO 27001 veille à ce que les informations soient protégées contre tout acc
 
 === Assurer la conformité : 
 
-De nombreuses industries sont soumises à des réglementations strictes (comme le RGPD, HIPAA, etc.), et l'ISO 27001 aide à assurer la conformité avec ces régulations.
+De nombreuses industries sont soumises à des réglementations strictes (comme le RGPD, HIPAA, etc.), ...
+
+=== ...
+
+
+et l'ISO 27001 aide à assurer la conformité avec ces régulations.
 
 
 
@@ -131,60 +136,97 @@ Sécuriser l'environnement avant, pendant et après l'embauche d'employés ou de
 
 Identifier, classer et gérer les actifs informationnels (données, équipements, logiciels, etc.).
 
-=== Contrôle d'accès : Garantir que seuls les utilisateurs autorisés peuvent accéder aux informations et aux systèmes.
+=== Contrôle d'accès : 
 
-Cryptographie : Utiliser des techniques de chiffrement pour protéger la confidentialité et l'intégrité des informations.
+Garantir que seuls les utilisateurs autorisés peuvent accéder aux informations et aux systèmes.
 
-Sécurité physique et environnementale : Protéger les informations physiques contre les accès non autorisés ou les dommages (incendie, inondation, vol, etc.).
+=== Cryptographie : 
 
-Sécurité des opérations : Mettre en œuvre des procédures pour assurer la gestion sécurisée des systèmes IT, y compris la gestion des incidents, des sauvegardes et des journaux.
+Utiliser des techniques de chiffrement pour protéger la confidentialité et l'intégrité des informations.
 
-Sécurité des communications : Protéger les informations pendant leur transmission sur les réseaux, incluant la sécurité des emails et des réseaux internes.
+=== Sécurité physique et environnementale : 
 
-Acquisition, développement et maintenance des systèmes : Intégrer des contrôles de sécurité dans les processus de développement de logiciels et de systèmes.
+Protéger les informations physiques contre les accès non autorisés ou les dommages (incendie, inondation, vol, etc.).
 
-Relations avec les fournisseurs : Assurer que les tiers respectent les exigences de sécurité de l'organisation.
+=== Sécurité des opérations : 
 
-Gestion des incidents de sécurité de l'information : Mettre en place des processus pour identifier, signaler et traiter les incidents de sécurité.
+Mettre en œuvre des procédures pour assurer la gestion sécurisée des systèmes IT, y compris la gestion des incidents, des sauvegardes et des journaux.
 
-Gestion de la continuité des activités : Assurer la disponibilité des systèmes critiques en cas de panne ou de crise.
+=== Sécurité des communications : 
 
-Conformité : Respecter les exigences légales, réglementaires et contractuelles en matière de sécurité de l'information.
+Protéger les informations pendant leur transmission sur les réseaux, incluant la sécurité des emails et des réseaux internes.
 
-Processus de certification ISO 27001
+=== Acquisition, développement et maintenance des systèmes : 
+
+Intégrer des contrôles de sécurité dans les processus de développement de logiciels et de systèmes.
+
+=== Relations avec les fournisseurs : 
+
+Assurer que les tiers respectent les exigences de sécurité de l'organisation.
+
+=== Gestion des incidents de sécurité de l'information : 
+
+Mettre en place des processus pour identifier, signaler et traiter les incidents de sécurité.
+
+=== Gestion de la continuité des activités : 
+
+Assurer la disponibilité des systèmes critiques en cas de panne ou de crise.
+
+=== Conformité : 
+
+Respecter les exigences légales, réglementaires et contractuelles en matière de sécurité de l'information.
+
+=== Processus de certification ISO 27001
+
 L'ISO 27001 n'est pas simplement une norme théorique ; elle peut être certifiée par des organismes accrédités. Voici les principales étapes du processus de certification :
 
-Évaluation des risques :
+== Évaluation des risques :
 
 L'organisation doit effectuer une analyse des risques pour identifier les menaces potentielles et évaluer leur impact sur les actifs informationnels.
-Mise en place des contrôles :
+
+=== Mise en place des contrôles :
+
+
 
 Sur la base de l'évaluation des risques, l'organisation doit choisir et mettre en œuvre les contrôles appropriés de l'annexe A.
-Documentation du SMSI :
+
+=== Documentation du SMSI :
 
 Il est essentiel de documenter les politiques, processus et procédures en matière de sécurité de l'information.
-Audit interne :
+
+=== Audit interne :
 
 Avant de solliciter la certification, l'organisation doit réaliser un audit interne pour s'assurer que le SMSI est conforme aux exigences de l'ISO 27001.
-Audit de certification :
+
+=== Audit de certification :
 
 Un organisme de certification accrédité effectue un audit en deux phases : une revue documentaire et une vérification sur site pour évaluer l'efficacité des mesures mises en place.
-Certification :
+
+=== Certification :
 
 Si l'organisation répond aux exigences de la norme, elle reçoit la certification ISO 27001, valable pour trois ans, avec des audits annuels de surveillance.
-Avantages de l'ISO 27001
-Gestion proactive des risques : L'ISO 27001 permet aux organisations d'adopter une approche proactive pour identifier et traiter les risques de sécurité de l'information.
 
-Confiance accrue : La certification ISO 27001 démontre aux clients, partenaires et autres parties prenantes que l'organisation prend la sécurité des informations au sérieux.
+== Avantages de l'ISO 27001
 
-Conformité réglementaire : En suivant les bonnes pratiques de l'ISO 27001, les organisations peuvent se conformer plus facilement aux réglementations en vigueur, comme le RGPD ou le HIPAA.
+=== Gestion proactive des risques : 
 
-Amélioration continue : Grâce à l'approche basée sur l'amélioration continue, les organisations peuvent constamment évaluer et ajuster leurs politiques de sécurité pour répondre aux nouvelles menaces.
+L'ISO 27001 permet aux organisations d'adopter une approche proactive pour identifier et traiter les risques de sécurité de l'information.
 
-Réduction des coûts liés aux incidents : En anticipant et en gérant les risques, l'ISO 27001 aide à réduire les coûts associés aux violations de sécurité ou aux pertes de données.
+=== Confiance accrue : 
 
-Conclusion
-L'ISO/IEC 27001 est une norme incontournable pour toute organisation qui souhaite mettre en place une approche rigoureuse et systématique de la sécurité de l'information. Elle aide à protéger les informations sensibles, à gérer les risques et à garantir la conformité avec les réglementations, tout en renforçant la confiance des parties prenantes et en optimisant les performances IT.
+La certification ISO 27001 démontre aux clients, partenaires et autres parties prenantes que l'organisation prend la sécurité des informations au sérieux.
+
+=== Conformité réglementaire : 
+
+En suivant les bonnes pratiques de l'ISO 27001, les organisations peuvent se conformer plus facilement aux réglementations en vigueur, comme le RGPD ou le HIPAA.
+
+=== Amélioration continue : 
+
+Grâce à l'approche basée sur l'amélioration continue, les organisations peuvent constamment évaluer et ajuster leurs politiques de sécurité pour répondre aux nouvelles menaces.
+
+=== Réduction des coûts liés aux incidents : 
+
+En anticipant et en gérant les risques, l'ISO 27001 aide à réduire les coûts associés aux violations de sécurité ou aux pertes de données.
 
 
 
@@ -194,5 +236,3 @@ L'ISO/IEC 27001 est une norme incontournable pour toute organisation qui souhait
 
 
 
-
-ChatGPT peut faire des erreurs. Envisagez de vérifier les informations importantes.
