--- a/index.adoc
+++ b/index.adoc
@@ -1,104 +1,146 @@
-= Introduction à la gouvernance IT (1,5 heures)
+= Gouvernance IT
 :revealjs_theme: beige
 :source-highlighter: highlight.js
 :icons: font
 
+== Introduction à la gouvernance IT 
+
 == Définition et importance de la gouvernance IT
 
 * link:./gouv-it-gesstion-it.html[Gouvernance IT vs gestion IT]
-* Objectifs de la gouvernance IT : alignement stratégique, optimisation des ressources, gestion des risques, conformité.
+* link:./principes-gouvernance-it.html[Objectifs de la gouvernance IT : alignement stratégique, optimisation des ressources, gestion des risques, conformité]
 * Liens avec la gouvernance d’entreprise.
 
 
 == Cadres de gouvernance IT
 
-* COBIT (Control Objectives for Information and Related Technologies).
-* ISO/IEC 38500 - Norme internationale de gouvernance IT.
-* ITIL (Information Technology Infrastructure Library).
+* link:./cobit.html[COBIT (Control Objectives for Information and Related Technologies)]
+* link:./iso-iec-385000.html[ISO/IEC 38500 - Norme internationale de gouvernance IT]
+* link:./itil.hmtl[ITIL (Information Technology Infrastructure Library)]
 
 
 === Rôle de la gouvernance IT dans la cybersécurité
 
-Intégration de la sécurité dans les processus de gouvernance IT.
-Alignement des politiques de cybersécurité avec les objectifs de gouvernance IT.
+* Intégration de la sécurité dans les processus de gouvernance IT.
+* Alignement des politiques de cybersécurité avec les objectifs de gouvernance IT.
 
-== Les fondations de la gouvernance IT (2 heures)
+== Les fondations de la gouvernance IT 
 
 * Principes de base de la gouvernance IT
 * Responsabilité, stratégie, et performance.
+
+=== ...
+
 * Gestion des parties prenantes : rôles et responsabilités.
 * Modèles de gouvernance IT
+
+=== ...
+
 * Centralisé vs décentralisé.
 * Gouvernance hybride : équilibre entre centralisation et autonomie locale.
-* Indicateurs de performance (KPI) et métriques
 
-¨KPI clés pour la gouvernance IT.
-Utilisation des indicateurs pour évaluer l’efficacité de la gouvernance.
+=== ...
 
-== Cybersécurité et gouvernance des risques (3 heures)
+* link:./kpi-gouvernance-it.html[Indicateurs de performance (KPI) et métriques KPI clés pour la gouvernance IT]
+* Utilisation des indicateurs pour évaluer l’efficacité de la gouvernance.
 
-Gestion des risques IT et cybersécurité
+== Cybersécurité et gouvernance des risques 
 
-Processus de gestion des risques IT.
-Identification, évaluation et priorisation des risques.
-Les principaux cadres de gestion des risques
+=== Gestion des risques IT et cybersécurité
 
-ISO 27005 – Gestion des risques liés à la sécurité de l'information.
-NIST (National Institute of Standards and Technology) – Framework de gestion des risques.
-Mise en place d’une politique de gestion des risques
+* Processus de gestion des risques IT.
+* Identification, évaluation et priorisation des risques.
 
-Gestion des incidents et continuité des activités.
-Plan de réponse aux incidents.
-Gouvernance et surveillance des incidents.
-Le rôle du CISO (Chief Information Security Officer)
+== Les principaux cadres de gestion des risques
 
-Positionnement du CISO dans la gouvernance IT.
-Relations avec les autres parties prenantes (DPO, direction).
+* link:./iso-27005.html[ISO 27005 – Gestion des risques liés à la sécurité de l'information]
+* link:./nist.html[NIST (National Institute of Standards and Technology) – Framework de gestion des risques]
+* Mise en place d’une politique de gestion des risques
+
+=== ...
+
+* Gestion des incidents et continuité des activités.
+* Plan de réponse aux incidents.
+
+=== ...
+
+* Gouvernance et surveillance des incidents.
+* link:./ciso.html[Le rôle du CISO (Chief Information Security Officer)]
+
+=== ...
+
+* Positionnement du CISO dans la gouvernance IT.
+* Relations avec les autres parties prenantes (DPO, direction).
 
 == Conformité et réglementation dans la gouvernance IT (2 heures)
 
 === Conformité IT : 
 
-un cadre pour la cybersécurité
-Règlementation GDPR et son impact sur la gouvernance IT.
-Lois et régulations nationales et internationales en matière de cybersécurité.
+* un cadre pour la cybersécurité
+* Règlementation GDPR et son impact sur la gouvernance IT.
+
+=== ...
+
+* link:./regulations-coso-sox-rgpd.html[Lois et régulations nationales et internationales en matière de cybersécurité]
 
 === Normes et cadres de référence en cybersécurité
-ISO 27001 – Systèmes de management de la sécurité de l'information.
-ISO 27017/27018 – Sécurité des services dans le cloud.
-Audit et conformité IT
+
+* link:./iso-27001.html[ISO 27001 – Systèmes de management de la sécurité de l'information]
+* link:./iso-27017-27018.html[ISO 27017/27018 – Sécurité des services dans le cloud]
+
+=== ...
+
+* Audit et conformité IT
 
 == Rôle des audits dans la gouvernance IT.
-Les audits internes vs externes.
-Évaluation et certification.
 
-== Stratégie de gouvernance IT et alignement avec la cybersécurité (2 heures)
-Développement de la stratégie IT
+* Les audits internes vs externes.
+* Évaluation et certification.
 
-Définir une stratégie IT alignée avec la mission et les objectifs d'entreprise.
-Rôle de la cybersécurité dans la stratégie IT.
-Gestion du changement et gouvernance IT
+== Stratégie de gouvernance IT et alignement avec la cybersécurité 
 
-Accompagner le changement dans les systèmes IT.
-Approche agile dans la gouvernance IT.
-Gouvernance des données
+* Développement de la stratégie IT
 
-Gestion des données et rôle de la cybersécurité.
-Gouvernance des données dans un environnement multi-cloud.
+* Définir une stratégie IT alignée avec la mission et les objectifs d'entreprise.
 
-== Les bonnes pratiques de gouvernance IT pour la cybersécurité (2 heures)
-Mise en œuvre des contrôles de sécurité IT
+=== ...
 
-Processus de gouvernance pour gérer les contrôles de sécurité.
-Mise en place de contrôles d’accès, de protection des données et de surveillance.
-Automatisation de la gouvernance IT et cybersécurité
+* Rôle de la cybersécurité dans la stratégie IT.
+* Gestion du changement et gouvernance IT
 
-Outils et plateformes de gouvernance IT.
-Automatisation des processus de sécurité (SIEM, IAM).
-Sensibilisation à la cybersécurité dans la gouvernance IT
+=== ...
 
-Formation et développement des employés.
-Promotion d’une culture de la sécurité au sein des organisations.
+* Accompagner le changement dans les systèmes IT.
+* Approche agile dans la gouvernance IT.
+
+=== ...
+
+* Gouvernance des données
+* Gestion des données et rôle de la cybersécurité.
+* Gouvernance des données dans un environnement multi-cloud.
+
+== Les bonnes pratiques de gouvernance IT pour la cybersécurité 
+
+* link:./bonnes-pratiques-cybersecurite.html[Les bonnes pratiques de gouvernance IT]
+* Mise en œuvre des contrôles de sécurité IT
+* Processus de gouvernance pour gérer les contrôles de sécurité.
+* Mise en place de contrôles d’accès, de protection des données et de surveillance.
+
+
+=== ...
+
+* Automatisation de la gouvernance IT et cybersécurité
+* Outils et plateformes de gouvernance IT.
+
+=== ...
+
+* link:./outils.html[Automatisation des processus de sécurité (SIEM, IAM)]
+* Sensibilisation à la cybersécurité dans la gouvernance IT
+
+=== ...
+
+* Formation et développement des employés.
+* Promotion d’une culture de la sécurité au sein des organisations.
 
 
 
